switch to lock-free PRNG, misc java 21 warnings fixed